--- a/index.html
+++ b/index.html
@@ -759,16 +759,15 @@
             </p>
           </div>
           <div class="container-fluid">
-            <div class="subheading mb-3">Appointment
-            </div>
-            <strong>University of Toronto, Toronto, ON, Canada</strong>
-              <ul class="mb-0" type="1" style="list-style-type:square">
+            <!-- <div class="subheading mb-3">Appointment
+            </div> -->
+            <!-- <strong>University of Toronto, Toronto, ON, Canada</strong> -->
+              <!-- <ul class="mb-0" type="1" style="list-style-type:square">
                 <li>
                   Postdoctoral Fellow | Department of Computer Science and Faculty of Information | Fall 2024 - present
-                  <!-- January 2024 - Present -->
                 </li>
-                <!-- <li>Visiting Assistant Professor | Khoury College of Computer Sciences | October 2022 - Present
-                </li> -->
+                <li>Visiting Assistant Professor | Khoury College of Computer Sciences | October 2022 - Present
+                </li>
               </ul>
             <br>
             <strong>University of Colorado, Boulder, CO, USA</strong>
@@ -776,9 +775,9 @@
                 <li>
                   Assistant Teaching Professor (part-time) | Department of Information Science | Fall 2024 - Spring 2025
                 </li>
-              </ul>
+              </ul> -->
 
-              <br>
+              <!-- <br> -->
 
             <!-- <div class="subheading mb-3">Education
             </div>
@@ -930,155 +929,80 @@
               </li>             
             </ul> -->
 
-            <br>
+            <!-- <br> -->
 
-            <div class="subheading mb-3">Teaching Experience
+            <div class="subheading mb-3">Instructor of Record
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
-                University of Colorado Boulder, Department of Information Science | Fall 2021 - Fall 2023 
-                <br>
-                Assistant Teaching Professor (part-time), <em>INFO 1301 - Statistics for Information Science, INFO 2301 - Quantitative Reasoning</em>
-               </li>
-              <li>
-                University of Colorado Boulder, Department of Information Science | Fall 2021 - Fall 2023 
-                <br>
-                Graduate Part-Time Instructor, <em>INFO 1301 - Statistics for Information Science, INFO 4609 - User-Centered Design</em>
-               </li>
-              <li>
-                University of Colorado Boulder, Department of Information Science | Fall 2021 - Fall 2023 
-                <br>
-                Teaching Assistant in <em>INFO 1111 - Understanding the World Through Data, INFO 1201 - Computational Reasoning, INFO 1301 - Statistics for Information Science</em>
-               </li>
-              <li>
-                Syracuse University, School of Information Studies | Fall 2019 - Spring 2021 
-                <br>
-                Teaching Assistant in <em>IST 300 - Digital Platforms, IST 343 - Data in Society, IST 421 - Information Visualization, IST 649 - Human Interaction with Computers</em>
-               </li>
-              <li>
-               Missouri State University, Department of Computer Science | Spring 2018 - Spring 2019 
-               <br>
-               Teaching Assistant in <em>CSC 130 - The World of Computer Science, CSC 131 - Computational Thinking</em>
+                Spring 2025: INFO 2301: Quantitative Reasoning, University of Colorado Boulder
               </li>
               <li>
-                Dhaka International University, Dhaka, Bangladesh | September 2017 - December 2017
-                <br>
-                Lecturer, Department of Computer Science and Engineering
-                <br> Courses taught: <em>Compiler Design (theory and lab), Algorithm Design and Analysis (theory and lab), Computer Organization and Architecture</em>
+                Spring 2025: INFO 1301: Statistics for Information Science, University of Colorado Boulder
+              </li>
+              <li>
+                Fall 2024: INFO 2301: Quantitative Reasoning, University of Colorado Boulder
+              </li>
+              <li>
+                Fall 2024: INFO 1301: Statistics for Information Science, University of Colorado Boulder
+              </li>
+              <li>
+                Spring 2024: INFO 4609: User-Centered Design, University of Colorado Boulder
+              </li>
+              <li>
+                Spring 2023: INFO 1301: Statistics for Information Science, University of Colorado Boulder
+              </li>
+              <li>
+                Fall 2017: Compiler Design, Dhaka International University
+              </li>
+              <li>
+                Fall 2017: Algorithm Design and Analysis, Dhaka International University
+              </li>
+              <li>
+                Fall 2017: Computer Organization and Architecture, Dhaka International University
               </li>
             </ul>
 
-            <!-- <br>
-            <div class="subheading mb-3">Course Designed
+            <div class="subheading mb-3">Teaching Assistant
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
-                Accessible Collaboration (course designed as one of the three PhD qualifying exams) | Fall 2021
-                <br>
-                Supervised by Darren Gergle | Northwestern University
+                Fall 2023: INFO 1111: Understanding the World Through Data, University of Colorado Boulder
+              </li>
+              <li>
+                Fall 2022: INFO 1301: Statistics for Information Science, University of Colorado Boulder
+              </li>
+              <li>
+                Spring 2022: INFO 1201: Computational Reasoning, University of Colorado Boulder
+              </li>
+              <li>
+                Fall 2021: INFO 1201: Computational Reasoning, University of Colorado Boulder
+              </li>
+              <li>
+                Spring 2021: IST 300: Digital Platforms, Syracuse University
+              </li>
+              <li>
+                Fall 2020: IST 421: Information Visualization, Syracuse University
+              </li>
+              <li>
+                Spring 2020: IST 343: Data in Society, Syracuse University
+              </li>
+              <li>
+                Fall 2019: IST 649: Human Interaction with Computers, Syracuse University
+              </li>
+              <li>
+                Spring 2019: CSC 130: The World of Computer Science, Missouri State University
+              </li>
+              <li>
+                Spring 2019: CSC 131: Computational Thinking, Missouri State University
+              </li>
+              <li>
+                Fall 2018: CSC 130: The World of Computer Science, Missouri State University
+              </li>
+              <li>
+                Spring 2018: CSC 131: Computational Thinking, Missouri State University
               </li>
             </ul>
-            <br> -->
-
-            <!-- <div class="subheading mb-3">Students Mentored
-            </div>
-            <ul class="mb-0" type="1">
-              <li>
-                Thomas McHugh | Undergrad in Computer Science, Northwestern University | 2020 - Present
-              </li> 
-              <li>
-                Rawan Mohamed | Undergrad in Computer Science, Northwestern University | 2020
-              </li>
-              <li>
-                Caroline Brewley | High school student researcher | 2019
-              </li>
-              <li>
-                Nusrat Jahan Mozumder | Undergrad in Computer Science and Engineering, Bangladesh University of Engineering & Technology | 2017 - 2018
-              </li>
-              <li>
-                Khandaker Ashrafi Akbar | Undergrad in Computer Science and Engineering, Bangladesh University of Engineering & Technology | 2017 - 2018
-              </li>
-              <li>
-                Fatema Khan | Undergrad in Computer Science and Engineering, United International University | 2016
-              </li>
-              <li>
-                Ahiya Ahammed | Undergrad in Computer Science and Engineering, United International University | 2016 
-              </li>
-            </ul>
-
-            <br>
-
-            <div class="subheading mb-3">Invited Talks
-            </div>
-            <ul class="mb-0" type="1">
-              <li>
-                Input and Interaction (INFO 463), University of Washington | November 2020 
-                <br> 
-                Guest lecture: Accessibility in Collaborative Writing for People with Vision Impairments
-              </li> 
-              <li>
-                Bangladesh HCI and ICTD Study and Research Group, Virtual Event | April 2020 
-                <br>
-                Talk: Designing for Accessible Interaction
-              </li>
-              <li> 
-                Microsoft Research PhD Fellowship Finalist Presentation, Redmond, WA, USA | November 2019 
-                <br> 
-                Poster: Designing for Collaborative Content Creation for People with Vision Impairments
-              </li>
-            </ul>
-
-            <br>
-
-            <div class="subheading mb-3">Academic Services
-            </div>
-            <ul class="mb-0" type="1">
-              <li>
-                Program Committee Member
-                <br> - Shadow PC, ACM COMPASS 2021
-              </li> 
-              <li>
-                Reviewer 
-                <br>
-                - ACM CHI 2021 | ACM CSCW 2019-2020 | ACM DIS 2020 | GHC Faculty Scholarship 2017 | Australasian Database Conference 2016
-              </li>
-              <li> 
-                Student Volunteer 
-                <br> 
-                - ACM CHI 2021, 2019 | ACM CSCW 2019 | ACM UbiComp 2018 | InfoSocial Graduate Conference at Northwestern University 2018
-              </li>
-              <li> 
-                Publicity Co-Chair 
-                <br> 
-                - InfoSocial Graduate Conference at Northwestern University 2019
-              </li>
-            </ul>
-
-            <br>
-
-            <div class="subheading mb-3">Outreach & Memberships
-            </div>
-            <ul class="mb-0" type="1">
-              <li>
-                Co-host & Co-organizer 
-                <br> - Inspiring Stories (podcast series on Bangladeshi women in STEM) | 2020 - Present
-              </li> 
-              <li>
-                Member 
-                <br> - Northwestern Graduate Women in Computing | 2019 - Present
-                <br> - ACM, SIGCHI, SIGACCESS | 2017 - Present
-                <br> - Bangladeshi Women in Computer Science and Engineering | 2015 - Present
-              </li>
-              <li> 
-                Code Coach Volunteer 
-                <br> - BraveCamp Chicago (non-profit coding camp for high school girls) | Summer 2018
-              </li>
-              <li> 
-                Vice-President
-                <br> - Murchhona : BUET (cultural club) | 2014 - 2015
-              </li>
-            </ul> -->
-
         </div>
       </section>
 
