--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a class="nav-link js-scroll-trigger" href="#students">Prospective Students</a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#cv">CV</a>
+            <a class="nav-link js-scroll-trigger" href="#teaching">Teaching</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#gallery">Personal</a>
@@ -93,6 +93,12 @@
           <div class="row mb-5">
             <div class="col-lg-8 col-md-8 col-sm-12">
               	<p class="justify">
+                  <div> 
+                    <p>
+                      <strong><a href="files/cv/CV.pdf" target="_blank">Click here to download my complete CV</a></strong>
+                    </p>
+                  </div>
+
                   I am a Postdoctoral Fellow in the <a href="https://web.cs.toronto.edu" target="_blank">Department of Computer Science</a> and the <a href="https://ischool.utoronto.ca/" target="_blank">Faculty of Information</a> at the <a href="https://www.utoronto.ca/" target="_blank">University of Toronto</a>, where I work with <a href="https://www.ishtiaque.net/" target="_blank">Syed Ishtiaque Ahmed</a> and <a href="https://shionguha.ca/" target="_blank">Shion Guha</a>.
 
                   
@@ -750,14 +756,9 @@
       </section> --> 
 
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="cv">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="teaching">
         <div class="my-auto">
           <h2 class="mb-5">Teaching</h2>
-          <div> 
-            <p>
-              <a href="files/cv/CV.pdf" target="_blank">Click here to download my complete CV</a>
-            </p>
-          </div>
           <div class="container-fluid">
             <!-- <div class="subheading mb-3">Appointment
             </div> -->
