--- a/index.html
+++ b/index.html
@@ -954,13 +954,13 @@
                 Spring 2023: INFO 1301: Statistics for Information Science, University of Colorado Boulder
               </li>
               <li>
-                Fall 2017: Compiler Design, Dhaka International University
+                Fall 2017: CSE 401: Compiler Design, Dhaka International University
               </li>
               <li>
-                Fall 2017: Algorithm Design and Analysis, Dhaka International University
+                Fall 2017: CSE 301: Algorithm Design and Analysis, Dhaka International University
               </li>
               <li>
-                Fall 2017: Computer Organization and Architecture, Dhaka International University
+                Fall 2017: CSE 209: Computer Organization and Architecture, Dhaka International University
               </li>
             </ul>
 
