--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="files/cv/CV.pdf" target="_blank">CV &nbsp; <i class="fas fa-external-link-alt fa-inverse"></i> </a> 
+            <a class="nav-link js-scroll-trigger" href="files/cv/CV.pdf" target="_blank">Curriculum Vitae &nbsp; <i class="fas fa-external-link-alt fa-inverse"></i> </a> 
           </li>
         </ul>
       </div>
