--- a/index.html
+++ b/index.html
@@ -289,8 +289,16 @@
         <div class="my-auto">
           <h2 class="mb-5">Research</h2>
           <div class="container-fluid">
+            <div class="image-column">
+              <img src="img/onlinediscourse.png" alt="Online Discourse">
+            </div>
             <div class="subheading mb-3">Social, Cultural, and Political Discourse Online
             </div>
+            <p class="justify">
+              Online platforms often serve as the "third space" or "public sphere" for people to foster a sense of community, where they engage in social, political, and cultural discourse. In this project, we examine how people shape narratives and initiate collective actions through these online communities and how understanding their interaction with and through these platforms help us understand people's sociopolitical perspectives.
+              <br>
+              <strong>Reference papers:</strong> [<a href="files/papers/CSCW24_transnational.pdf" target="_blank">CSCW '24a</a>] [<a href="files/papers/CSCW24_minority.pdf" target="_blank">CSCW '24b</a>] [<a href="files/papers/CHI22_collaborative.pdf" target="_blank">CHI '22</a>] [<a href="files/papers/ICTD22_microcelebrity.pdf" target="_blank">ICTD '22</a>]
+            </p>
             <div class="subheading mb-3">Experience and Interaction with Algorithmic Systems
             </div>
             <div class="subheading mb-3">Fairness and Bias in Natural Language Processing
