--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
                 <img class="img-fluid" src="img/cox16.JPG" alt="Two fishing boats somewhere on the Naf river on the way to the Cox's Bazar." >
               </div>
               <div class="col-lg-8">
+                <h2 class="mb-3">Social, Cultural, and Political Discourse Online</h2>
                 <p class="justify">
                   Online platforms often serve as the "third space" or "public sphere" for people to foster a sense of community, where they engage in social, political, and cultural discourse. In this project, we examine how people shape narratives and initiate collective actions through these online communities and how understanding their interaction with and through these platforms help us understand people's sociopolitical perspectives.
                   <br>
