--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-4">
-                <img class="img-fluid" src="img/cox16.JPG" alt="Two fishing boats somewhere on the Naf river on the way to the Cox's Bazar." >
+                <img class="img-fluid" src="img/onlinediscourse.png" alt="A visual representation of online communities." >
               </div>
               <div class="col-lg-8">
                 <h2 class="mb-3">Social, Cultural, and Political Discourse Online</h2>
