--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <img class="img-fluid" src="img/onlinediscourse.png" alt="A visual representation of online communities." >
               </div>
               <div class="col-lg-8">
-                <h2 class="mb-2">Social, Cultural, and Political Discourse Online</h2>
+                <h3 class="subheading mb-3">Social, Cultural, and Political Discourse Online</h3>
                 <p class="justify">
                   Online platforms often serve as the "third space" or "public sphere" for people to foster a sense of community, where they engage in social, political, and cultural discourse. In this project, we examine how people shape narratives and initiate collective actions through these online communities and how understanding their interaction with and through these platforms help us understand people's sociopolitical perspectives.
                   <br>
