--- a/index.html
+++ b/index.html
@@ -303,18 +303,21 @@
                 </p>
               </div>
             </div>
-            <!-- <div class="image-column">
-              <img src="img/onlinediscourse.png" alt="Online Discourse">
-            </div> -->
-            <!-- <div class="subheading mb-3">Social, Cultural, and Political Discourse Online -->
-            <!-- </div> -->
-            <!-- <p class="justify">
-              Online platforms often serve as the "third space" or "public sphere" for people to foster a sense of community, where they engage in social, political, and cultural discourse. In this project, we examine how people shape narratives and initiate collective actions through these online communities and how understanding their interaction with and through these platforms help us understand people's sociopolitical perspectives.
-              <br>
-              <strong>Reference papers:</strong> [<a href="files/papers/CSCW24_transnational.pdf" target="_blank">CSCW '24a</a>] [<a href="files/papers/CSCW24_minority.pdf" target="_blank">CSCW '24b</a>] [<a href="files/papers/CHI22_collaborative.pdf" target="_blank">CHI '22</a>] [<a href="files/papers/ICTD22_microcelebrity.pdf" target="_blank">ICTD '22</a>]
-            </p> -->
-            <div class="subheading mb-3">Experience and Interaction with Algorithmic Systems
+            <div class="row">
+              <div class="col-lg-4">
+                <img class="img-fluid" src="img/panoptic_platform.png" alt="A visual representation of panoptic governance on Quora." >
+              </div>
+              <div class="col-lg-8">
+                <h3 class="subheading mb-3">Experience and Interaction with Algorithmic Systems</h3>
+                <p class="justify">
+                  This questions how people experience and interact with algorithmic systems in contexts shaped by collective power, precarity, and institutional control. Through studies in a wide range of contexts, such as platform governance, gig work, and public services, I analyze how algorithmic systems mediate identity, access, recognition, and accountability in everyday life.
+                  <br>
+                  <br>
+                  <strong>Reference papers:</strong> [<a href="files/papers/CHI25_homelessness.pdf" target="_blank">CHI '25</a>] [<a href="files/papers/JCSCW25_gig.pdf" target="_blank">JCSCW</a>] [<a href="files/papers/ICTD24_civics.pdf" target="_blank">ICTD '24</a>] [<a href="files/papers/CSCW21_governance.pdf" target="_blank">CSCW '21</a>]
+                </p>
+              </div>
             </div>
+
             <div class="subheading mb-3">Fairness and Bias in Natural Language Processing
             </div>
           </div>
