--- a/index.html
+++ b/index.html
@@ -317,8 +317,19 @@
                 </p>
               </div>
             </div>
-
-            <div class="subheading mb-3">Fairness and Bias in Natural Language Processing
+            <div class="row">
+              <div class="col-lg-4">
+                <img class="img-fluid" src="img/bsa_tool_audit.png" alt="A visual representation of audits of Bengali sentiment analysis tools." >
+              </div>
+              <div class="col-lg-8">
+                <h3 class="subheading mb-3">Fairness and Bias in Low-Resource Language Models</h3>
+                <p class="justify">
+                  My work on fairness and bias in low-resource language models examines how linguistic, cultural, and demographic underrepresentation shapes model behavior and evaluation. By developing new corpora, auditing techniques, and community-centered evaluation frameworks, I surface the limitations of dominant approaches and advocate for more equitable language technologies.
+                  <br>
+                  <br>
+                  <strong>Reference papers:</strong> [<a href="files/papers/CHI25_language.pdf" target="_blank">CHI '25</a>] [<a href="files/papers/CHI24_audit.pdf" target="_blank">CHI '24</a>] [<a href="files/papers/EACL23-C3NLP_bibed.pdf" target="_blank">EACL '23 (C3NLP)</a>]
+                </p>
+              </div>
             </div>
           </div>
         </div>
