--- a/index.html
+++ b/index.html
@@ -333,6 +333,21 @@
                 </p>
               </div>
             </div>
+            <br>
+            <div class="row">
+              <div class="col-lg-4">
+                <img class="img-fluid" src="img/bsa_tool_audit.png" alt="A visual representation of audits of Bengali sentiment analysis tools." >
+              </div>
+              <div class="col-lg-8">
+                <h3 class="subheading mb-3">Computational Modeling of Multimodal Affective Contents</h3>
+                <p class="justify">
+                  Previously, I worked on identifying affective aspects (e.g., sarcasm, difficulty) of online content through computational modeling of social media content. Through multimodal approaches that combined textual, images, gaze, and other metadata, I developed datasets and models that supported user interaction and content routing.
+                  <br>
+                  <br>
+                  <strong>Reference papers:</strong> [<a href="files/posters/ICMI18_sarcasm.pdf" target="_blank">ICMI '18</a>] [<a href="files/papers/ICCBD18_sarcasm.pdf" target="_blank">ICCBD '18</a>] [<a href="files/papers/OzCHI18_smqa.pdf" target="_blank">OzCHI '18</a>] [<a href="files/papers/APSEC18_soqde.pdf" target="_blank">APSEC '18</a>]
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
