--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
               </div>
             </div>
             <br>
+            <br>
             <div class="row">
               <div class="col-lg-4">
                 <img class="img-fluid" src="img/panoptic_platform.png" alt="A visual representation of panoptic governance on Quora." >
@@ -318,6 +319,7 @@
                 </p>
               </div>
             </div>
+            <br>
             <br>
             <div class="row">
               <div class="col-lg-4">
@@ -334,9 +336,10 @@
               </div>
             </div>
             <br>
+            <br>
             <div class="row">
               <div class="col-lg-4">
-                <img class="img-fluid" src="img/bsa_tool_audit.png" alt="A visual representation of audits of Bengali sentiment analysis tools." >
+                <img class="img-fluid" src="img/multimodal_process_diagram.png" alt="A visual representation of multimodal approach to sarcasm detection." >
               </div>
               <div class="col-lg-8">
                 <h3 class="subheading mb-3">Computational Modeling of Multimodal Affective Contents</h3>
