--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <img class="img-fluid" src="img/multimodal_process_diagram.png" alt="A visual representation of multimodal approach to sarcasm detection." >
               </div>
               <div class="col-lg-8">
-                <h3 class="subheading mb-3">Computational Modeling of Multimodal Affective Contents</h3>
+                <h3 class="subheading mb-3">Computational Modeling of Multimodal Interaction</h3>
                 <p class="justify">
                   Previously, I worked on identifying affective aspects (e.g., sarcasm, difficulty) of online content through computational modeling of social media content. Through multimodal approaches that combined textual, images, gaze, and other metadata, I developed datasets and models that supported user interaction and content routing.
                   <br>
