--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               <div class="col-lg-8">
                 <h3 class="subheading mb-3">Social, Cultural, and Political Discourse Online</h3>
                 <p class="justify">
-                  Online platforms often serve as the "third space" or "public sphere" for people to foster a sense of community, where they engage in social, political, and cultural discourse. In this project, we examine how people shape narratives and initiate collective actions through these online communities and how understanding their interaction with and through these platforms help us understand people's sociopolitical perspectives.
+                  Online platforms often serve as the "third space" or "public sphere" for people to foster a sense of community, where they engage in social, political, and cultural discourse. In this project, I examine how people shape narratives and initiate collective actions through these online communities and how understanding their interaction with and through these platforms help us understand people's sociopolitical perspectives. My prior work in this space has looked into conversations around indigeneity, minority identity, and contemporary local and global politics.
                   <br>
                   <br>
                   <strong>Reference papers:</strong> [<a href="files/papers/CSCW24_transnational.pdf" target="_blank">CSCW '24a</a>] [<a href="files/papers/CSCW24_minority.pdf" target="_blank">CSCW '24b</a>] [<a href="files/papers/CHI22_collaborative.pdf" target="_blank">CHI '22</a>] [<a href="files/papers/ICTD22_microcelebrity.pdf" target="_blank">ICTD '22</a>]
@@ -312,7 +312,7 @@
               <div class="col-lg-8">
                 <h3 class="subheading mb-3">Experience and Interaction with Algorithmic Systems</h3>
                 <p class="justify">
-                  This questions how people experience and interact with algorithmic systems in contexts shaped by collective power, precarity, and institutional control. Through studies in a wide range of contexts, such as platform governance, gig work, and public services, I analyze how algorithmic systems mediate identity, access, recognition, and accountability in everyday life.
+                  This questions how people experience and interact with algorithmic systems in contexts shaped by collective power, precarity, and institutional control. Through studies in a wide range of contexts, such as platform governance, gig work, and public services, I analyze how algorithmic systems mediate access, recognition, surveillance, and accountability in everyday life.
                   <br>
                   <br>
                   <strong>Reference papers:</strong> [<a href="files/papers/CHI25_homelessness.pdf" target="_blank">CHI '25</a>] [<a href="files/papers/JCSCW25_gig.pdf" target="_blank">JCSCW</a>] [<a href="files/papers/ICTD24_civics.pdf" target="_blank">ICTD '24</a>] [<a href="files/papers/CSCW21_governance.pdf" target="_blank">CSCW '21</a>]
@@ -344,7 +344,7 @@
               <div class="col-lg-8">
                 <h3 class="subheading mb-3">Computational Modeling of Multimodal Interaction</h3>
                 <p class="justify">
-                  Previously, I worked on identifying affective aspects (e.g., sarcasm, difficulty) of online content through computational modeling of social media content. Through multimodal approaches that combined textual, images, gaze, and other metadata, I developed datasets and models that supported user interaction and content routing.
+                  Previously, I worked on identifying affective aspects (e.g., sarcasm, difficulty) of online content through computational modeling of social media content. Through multimodal approaches that combined textual, images, gaze, and other metadata from platforms like Flickr, StackOverflow, and Facebook, I developed datasets and models that supported user interaction and content routing.
                   <br>
                   <br>
                   <strong>Reference papers:</strong> [<a href="files/posters/ICMI18_sarcasm.pdf" target="_blank">ICMI '18</a>] [<a href="files/papers/ICCBD18_sarcasm.pdf" target="_blank">ICCBD '18</a>] [<a href="files/papers/OzCHI18_smqa.pdf" target="_blank">OzCHI '18</a>] [<a href="files/papers/APSEC18_soqde.pdf" target="_blank">APSEC '18</a>]
