--- a/index.html
+++ b/index.html
@@ -229,6 +229,14 @@
                 	<ul class="fa-ul mb-0 term-list">
                     <li class="term-item">
                       <i class="fa-li fas fa-pen-nib"></i>
+                      Invited talk at the University of Michigan.
+                    </li>
+                    <li class="term-item">
+                      <i class="fa-li fas fa-pen-nib"></i>
+                      Our paper on <a href="files/papers/CHI25_homelessness.pdf" target="_blank">datafication of care</a> got an honorable mention CHI 2025!
+                    </li>
+                    <li class="term-item">
+                      <i class="fa-li fas fa-pen-nib"></i>
                       Two papers have been accepted to CHI 2025!
                     </li>
                     <li class="term-item">
