--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <img class="img-fluid" src="img/onlinediscourse.png" alt="A visual representation of online communities." >
               </div>
               <div class="col-lg-8">
-                <h3 class="subheading mb-3">Social, Cultural, and Political Discourse Online</h3>
+                <h3 class="subheading mb-3 text-primary">Social, Cultural, and Political Discourse Online</h3>
                 <p class="justify">
                   Online platforms often serve as the "third space" or "public sphere" for people to foster a sense of community, where they engage in social, political, and cultural discourse. In this project, I examine how people shape narratives and initiate collective actions through these online communities and how understanding their interaction with and through these platforms help us understand people's sociopolitical perspectives. My prior work in this space has looked into conversations around indigeneity, minority identity, and contemporary local and global politics.
                   <br>
@@ -318,7 +318,7 @@
                 <img class="img-fluid" src="img/panoptic_platform.png" alt="A visual representation of panoptic governance on Quora." >
               </div>
               <div class="col-lg-8">
-                <h3 class="subheading mb-3">Experience and Interaction with Algorithmic Systems</h3>
+                <h3 class="subheading mb-3 text-primary">Experience and Interaction with Algorithmic Systems</h3>
                 <p class="justify">
                   This questions how people experience and interact with algorithmic systems in contexts shaped by collective power, precarity, and institutional control. Through studies in a wide range of contexts, such as platform governance, gig work, and public services, I analyze how algorithmic systems mediate access, recognition, surveillance, and accountability in everyday life.
                   <br>
@@ -334,7 +334,7 @@
                 <img class="img-fluid" src="img/bsa_tool_audit.png" alt="A visual representation of audits of Bengali sentiment analysis tools." >
               </div>
               <div class="col-lg-8">
-                <h3 class="subheading mb-3">Fairness and Bias in Low-Resource Language Models</h3>
+                <h3 class="subheading mb-3 text-primary">Fairness and Bias in Low-Resource Language Models</h3>
                 <p class="justify">
                   My work on fairness and bias in low-resource language models examines how linguistic, cultural, and demographic underrepresentation shapes model behavior and evaluation. By developing new corpora, auditing techniques, and community-centered evaluation frameworks, I surface the limitations of dominant approaches and advocate for more equitable language technologies.
                   <br>
@@ -350,7 +350,7 @@
                 <img class="img-fluid" src="img/multimodal_process_diagram.png" alt="A visual representation of multimodal approach to sarcasm detection." >
               </div>
               <div class="col-lg-8">
-                <h3 class="subheading mb-3">Computational Modeling of Multimodal Interaction</h3>
+                <h3 class="subheading mb-3 text-primary">Computational Modeling of Multimodal Interaction</h3>
                 <p class="justify">
                   Previously, I worked on identifying affective aspects (e.g., sarcasm, difficulty) of online content through computational modeling of social media content. Through multimodal approaches that combined textual, images, gaze, and other metadata from platforms like Flickr, StackOverflow, and Facebook, I developed datasets and models that supported user interaction and content routing.
                   <br>
