--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
              
             <div class="container-fluid">
 
-              <div class="subheading mb-3">Peer-Reviewed Journal and Conference Papers
+              <div class="subheading mb-3 text-primary">Peer-Reviewed Journal and Conference Papers
               </div>
               <!-- <ol class="mb-0" type="1" reversed> -->
               <!-- <ol reversed class="mb-0" style="list-style-type: decimal;"> -->
@@ -524,7 +524,7 @@
             </div>
 
             <div class="container-fluid">
-              <div class="subheading mb-3">Workshops Co-organized
+              <div class="subheading mb-3 text-primary">Workshops Co-organized
               </div>
               <ul class="mb-0" type="1" style="list-style-type:square">
                 <li>
@@ -556,7 +556,7 @@
             </div>
 
             <div class="container-fluid">
-              <div class="subheading mb-3">Selected Workshop Papers, Posters, and Doctoral Consortia
+              <div class="subheading mb-3 text-primary">Selected Workshop Papers, Posters, and Doctoral Consortia
               </div>
               <ul class="mb-0" type="1" style="list-style-type:square">
                 <li>
@@ -1026,7 +1026,7 @@
 
             <!-- <br> -->
 
-            <div class="subheading mb-3">Instructor of Record
+            <div class="subheading mb-3 text-primary">Instructor of Record
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
@@ -1060,7 +1060,7 @@
 
             <br>
 
-            <div class="subheading mb-3">Teaching Assistant
+            <div class="subheading mb-3 text-primary">Teaching Assistant
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
