--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
                 <img class="img-fluid" src="img/multimodal_process_diagram.png" alt="A visual representation of multimodal approach to sarcasm detection." >
               </div>
               <div class="col-lg-8">
-                <h3 class="subheading mb-3 text-primary">Computational Modeling of Multimodal Interaction</h3>
+                <h3 class="subheading mb-3 text-primary">Computational Models to Support User Interaction</h3>
                 <p class="justify">
-                  Previously, I worked on identifying affective aspects (e.g., sarcasm, difficulty) of online content through computational modeling of social media content. Through multimodal approaches that combined textual, images, gaze, and other metadata from platforms like Flickr, StackOverflow, and Facebook, I developed datasets and models that supported user interaction and content routing.
+                  Based on the empirical findings of my studies in other projects, my research often leads to developing computational models that facilitate and support user interaction in online platforms. Previously, I worked on identifying affective aspects (e.g., sarcasm, difficulty) of online content through computational modeling of social media content. Through multimodal approaches, I develop models and datasets that seek to foster user engagement and content routing.
                   <br>
                   <br>
                   <strong>Reference papers:</strong> [<a href="files/posters/ICMI18_sarcasm.pdf" target="_blank">ICMI '18</a>] [<a href="files/papers/ICCBD18_sarcasm.pdf" target="_blank">ICCBD '18</a>] [<a href="files/papers/OzCHI18_smqa.pdf" target="_blank">OzCHI '18</a>] [<a href="files/papers/APSEC18_soqde.pdf" target="_blank">APSEC '18</a>]
