--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <br>
             <div class="row">
               <div class="col-lg-4">
-                <img class="img-fluid" src="img/multimodal_process_diagram.png" alt="A visual representation of multimodal approach to sarcasm detection." >
+                <img class="img-fluid" src="img/mod-guide.png" alt="A visual diagram of Mod-guide, a moderation feedback system." >
               </div>
               <div class="col-lg-8">
                 <h3 class="subheading mb-3 text-primary">Computational Models to Support User Interaction</h3>
