--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                   This questions how people experience and interact with algorithmic systems in contexts shaped by collective power, precarity, and institutional control. Through studies in a wide range of contexts, such as platform governance, gig work, and public services, I analyze how algorithmic systems mediate access, recognition, surveillance, and accountability in everyday life.
                   <br>
                   <br>
-                  <strong>Reference papers:</strong> [<a href="files/papers/CHI25_homelessness.pdf" target="_blank">CHI '25</a>] [<a href="files/papers/JCSCW25_gig.pdf" target="_blank">JCSCW</a>] [<a href="files/papers/ICTD24_civics.pdf" target="_blank">ICTD '24</a>] [<a href="files/papers/CSCW21_governance.pdf" target="_blank">CSCW '21</a>]
+                  <strong>Reference papers:</strong> [<a href="files/papers/CSCW25_migrants.pdf" target="_blank">CSCW '25</a>] [<a href="files/papers/CHI25_homelessness.pdf" target="_blank">CHI '25</a>] [<a href="files/papers/JCSCW25_gig.pdf" target="_blank">JCSCW</a>] [<a href="files/papers/ICTD24_civics.pdf" target="_blank">ICTD '24</a>] [<a href="files/papers/CSCW21_governance.pdf" target="_blank">CSCW '21</a>] [<a href="files/papers/ICTD20_stigma.pdf" target="_blank">ICTD '20</a>]
                 </p>
               </div>
             </div>
