--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@
                         </a>
                       </li>
                       <li class="list-inline-item">
+                        <a href="https://calendar.google.com/calendar/embed?src=dipto.cs.uoft%40gmail.com&ctz=America%2FDenver" target="_blank" aria-label="Calendar">
+                          <span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i aria-hidden="true" title="Calendar" class="ai ai-calendar fa-stack-1x fa-inverse"></i>
+                          </span>
+                        </a>
+                      </li>
+                      <li class="list-inline-item">
                         <a href="files/cv/CV.pdf" target="_blank" aria-label="CV">
                           <span class="fa-stack fa-lg">
                             <i class="fa fa-circle fa-stack-2x"></i>
