--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <a href="https://calendar.google.com/calendar/embed?src=dipto.cs.uoft%40gmail.com&ctz=America%2FDenver" target="_blank" aria-label="Calendar">
                           <span class="fa-stack fa-lg">
                             <i class="fa fa-circle fa-stack-2x"></i>
-                            <i aria-hidden="true" title="Calendar" class="ai ai-calendar fa-stack-1x fa-inverse"></i>
+                            <i aria-hidden="true" title="Calendar" class="fa fa-calendar fa-stack-1x fa-inverse"></i>
                           </span>
                         </a>
                       </li>
