--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,7 @@
             University of Toronto <br>
             Department of Computer Science <br>
             Room # 5166, Bahen Centre for Information Technology <br>
-            Saint George Street, Toronto, ON M5S 2E4, Canada
+            40 Saint George Street, Toronto, ON M5S 2E4, Canada
           </p>
           
           <a href="mailto:dipto.das@utoronto.ca" target="_blank">dipto [dot] das [at] utoronto [dot] ca</a>
