--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                     <p>
                         Ben Zefeng Zhang, <strong>Dipto Das</strong>, and Bryan Semaan. 2025. 
                         <a href="files/papers/JCSCW25_gig.pdf" target="_blank">Identity Alignment and the Sociotechnical Mechanisms of Reconfiguring Emotional Labor in Transnational Gig Education Platforms.</a> 
-                        To appear In <em>Computer Supported Cooperative Work: The Journal of Collaborative Computing and Work Practices (JCSCW)</em>.
+                        In <em>Computer Supported Cooperative Work: The Journal of Collaborative Computing and Work Practices (JCSCW)</em>.
                     </p>
                 </li>
 
